--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "mocha": "1.12.0",
     "expect.js": "0.2.0",
     "superagent": "0.15.4",
-    "engine.io-client": "Karnith/engine.io-clien",
+    "engine.io-client": "Karnith/engine.io-client",
     "s": "0.1.1"
   },
   "scripts": { "test" : "make test" },
